# atelier

./: .gitattributes  .gitignore  LICENSE  README.md  atelier_runtime.py  build_gallery.py  cmux.example.json  cmux_gallery.py  dock.example.json  fig_annotate_server.py  install.sh  notes.md  package-lock.json  package.json  playwright.config.js  project_gallery.py  project_gallery_noserver.py  test_wrap2.tex  tsconfig.json  zotero_to_gallery.py
.claude/: launch.json
assets/: agent_bridge_ui.js  annot_kit.js  atelier_events.js  atelier_runtime.js  biblio.html  code_editor.html  diff_versions.js  editor_factory.js  gallery_template.html  latex_studio.html  md_studio.html  md_viewer.html  pdf_viewer.html  sel_overlay.js  svg_viewer.html
cm6-src/: .gitignore  build.mjs  facade.js  package-lock.json  package.json
docs/: editor-surface-contract.md  known-issues.md  plan-atelier-daemon-launchd.md  plan-ide-unifie-cm6-runtime-rust.md  rust-route-inventory.md  (+4 more)
rust/crates/atelier-daemon/: Cargo.toml
rust/crates/atelier-daemon/src/: build_info.rs  config.rs  control.rs  events.rs  host.rs  instance.rs  lifecycle.rs  main.rs  metrics.rs  registry.rs  router.rs  sessions.rs
rust/crates/atelier-daemon/tests/: annotations_mcp.rs  daemon_smoke.rs  double_start.rs  html_bootstrap.rs  multiproject.rs  sessions_http.rs
rust/crates/atelier-server/: Cargo.toml
rust/crates/atelier-server/src/: agent.rs  app.rs  documents.rs  files.rs  gallery.rs  git.rs  host.rs  lib.rs  main.rs  project_runtime.rs  workspace.rs  zotero.rs
rust/crates/atelier-server/tests/: http_smoke.rs
(+151 files in other folders)
