[package]
name = "atelier-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atelier-daemon"
path = "src/main.rs"

[dependencies]
atelier-core = { path = "../atelier-core" }
atelier-server = { path = "../atelier-server" }
axum = "0.8"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
