[package]
name = "atelier-server"
version = "0.1.0"
edition = "2024"

[dependencies]
atelier-core = { path = "../atelier-core" }
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
notify = "8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
md-5 = "0.11.0"
hex = "0.4.3"
zip = { version = "8.6.0", features = ["deflate"] }
flate2 = "1.1.9"
rusqlite = { version = "0.32", features = ["bundled"] }
